[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=3]
[ext_resource path="res://page/navigation/tools/navigationPage.gd" type="Script" id=4]
[ext_resource path="res://page/navigation/tools/SwipeDetector.tscn" type="PackedScene" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
alignment = 2

[node name="Swipe detector" parent="." instance=ExtResource( 5 )]

[node name="Tween" type="Tween" parent="."]
[connection signal="distance_from_last" from="Swipe detector" to="." method="_on_Swipe_detector_distance_from_last"]
[connection signal="start_swiping" from="Swipe detector" to="." method="_on_Swipe_detector_start_swiping"]
[connection signal="swiped" from="Swipe detector" to="." method="_on_Swipe_detector_swiped"]
[connection signal="swiped_canceled" from="Swipe detector" to="." method="_on_Swipe_detector_swiped_canceled"]
